// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: transparent;
  border: none;
  border-bottom: 2px solid #93a3ad;
  box-sizing: border-box;
  color: #364c5a;
  font-size: 16px;
  height: 30px;
  padding: 0px 3px;
  outline: none;
  width: 100%;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus {
  border-color: #03a9f4;
}

.c1:focus + .c2 {
  color: #03a9f4;
  font-size: 12px;
  -webkit-transform: translateY(-22px);
  -ms-transform: translateY(-22px);
  transform: translateY(-22px);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  <input
    className="c1"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
.c3 {
  cursor: pointer;
  display: block;
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: text;
  font-size: 16px;
  left: 0;
  position: absolute;
  top: 6px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 12px;
  -webkit-transform: translateY(-22px);
  -ms-transform: translateY(-22px);
  transform: translateY(-22px);
}

.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: transparent;
  border: none;
  border-bottom: 2px solid #93a3ad;
  box-sizing: border-box;
  color: #364c5a;
  font-size: 16px;
  height: 30px;
  padding: 0px 3px;
  outline: none;
  width: 100%;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus {
  border-color: #03a9f4;
}

.c1:focus + .c2 {
  color: #03a9f4;
  font-size: 12px;
  -webkit-transform: translateY(-22px);
  -ms-transform: translateY(-22px);
  transform: translateY(-22px);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  <input
    className="c1"
    defaultValue="foo"
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="c2 c3"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: transparent;
  border: none;
  border-bottom: 2px solid #93a3ad;
  box-sizing: border-box;
  color: #364c5a;
  font-size: 16px;
  height: 30px;
  padding: 0px 3px;
  outline: none;
  width: 100%;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus {
  border-color: #03a9f4;
}

.c1:focus + .c3 {
  color: #03a9f4;
  font-size: 12px;
  -webkit-transform: translateY(-22px);
  -ms-transform: translateY(-22px);
  transform: translateY(-22px);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

.c2 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  margin-top: 8px;
}

<div
  className="c0"
>
  <input
    className="c1"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  <div
    className="c2"
  >
    Error message
  </div>
</div>
`;
